oktana-slack-integration/force-app/main/default/objects/Conversation__c/Conversation__c.object-meta.xml
<CustomObject>
    <label>Conversation</label>
    <nameField>
        <label>Conversation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>