oktana-slack-integration/force-app/main/default/objects/Conversation__c/fields/Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id__c</fullName>
    <label>Conversation_Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>