oktana-slack-integration/force-app/main/default/objects/Conversation__c/fields/IsDirectMessage__c.field-meta.xml
<CustomField>
    <fullName>IsDirectMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Direct Message</label>
    <type>Checkbox</type>
</CustomField>