oktana-slack-integration/force-app/main/default/objects/Conversation__c/fields/Members__c.field-meta.xml
<CustomField>
    <fullName>Members__c</fullName>
    <label>Members</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>