oktana-slack-integration/force-app/main/default/objects/Conversation__c/fields/Message_Timestamps__c.field-meta.xml
<CustomField>
    <fullName>Message_Timestamps__c</fullName>
    <description>Message Timestamps</description>
    <label>Message Timestamps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>