oktana-slack-integration/force-app/main/default/objects/Conversation__c/fields/Slack_Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Conversation_Id__c</fullName>
    <externalId>true</externalId>
    <label>Slack Conversation Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>