oktana-slack-integration/force-app/main/default/objects/Conversation__c/fields/Slack_Workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Workspace_Id__c</fullName>
    <label>Slack Workspace Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>