oktana-slack-integration/force-app/main/default/objects/Conversation__c/recordTypes/Slack.recordType-meta.xml
<RecordType>
    <fullName>Slack</fullName>
    <active>true</active>
    <description>Record type to differentiate Slack messages from other types of messaging service.</description>
    <label>Slack</label>
</RecordType>